minor cleanup in introduction; add analysis of change in proportion of high-code marks over time by international class

--- a/the_new_trademark_complexity.tex
+++ b/the_new_trademark_complexity.tex
@@ -97,7 +97,9 @@
 
 \begin{itshape}
 
-Although the prototypical trademark may be a brand name (e.g., APPLE, NIKE), trademark law also protects a vast array of nonverbal product features (e.g., the physical appearance of an Apple Store, the design of Nike Air Jordan shoes). Trademark doctrine largely conceives of all these things in the same way: as symbols that tell the consuming public who makes a product. But that conception is becoming increasingly untenable. Drawing on data culled from 10.7 million trademark applications filed at the U.S. Patent \& Trademark Office (USPTO), this Article presents evidence of rising numbers of applications for nonword trademarks that are highly specific, intricate, and often unlikely to be recognized by consumers who are not familiar with the nuances of a particular industry. In so doing, this Article provides the first large-scale empirical analysis of the ``design search codes'' the USPTO assigns to any trademark application containing images. Since the USPTO initiated its modern design coding system in the mid-1980s, the number of highly complex nonword trademarks, as measured by number of design search codes, has risen at least 700\% and has also increased as a proportion of all applications. One explanation for this is that having more codes increases a mark's odds of USPTO approval, although one could also infer that, as desirable word marks become more scarce, businesses have begun to substitute away from words into images. There are two principal reasons to be concerned about this trend. First, as highly specific and detailed nonword trademarks become more common, there is a growing risk that some of these marks—often those applied for by luxury brands—effectively subsidize a feeling of in-group membership for the consumers that can recognize those marks, a dynamic that reinforces patterns of social inequality. Second, opportunistic or even fraudulent applicants, incentivized by the favorable odds of USPTO approval for complex nonword marks, may prosecute nonword applications that they wouldn't have otherwise pursued, resulting in ``clutter'' on the USPTO's registers that shrinks the public domain and may disadvantage competing businesses. In response, this Article proposes that considering consumer sophistication as part of the threshold inquiry into a nonword trademark's validity can help temper the potential overprotection of highly complex nonword marks, as well as the risk that marks recognized by sophisticated consumers will receive too broad a scope of protection.
+Although the prototypical trademark may be a brand name (e.g., APPLE, NIKE), trademark law also protects a vast array of nonverbal product features (e.g., the physical appearance of an Apple Store, the design of Nike Air Jordan shoes). Trademark doctrine largely conceives of all these things in the same way: as symbols that tell the consuming public who makes a product. But that conception is becoming increasingly untenable. Drawing on data culled from 10.7 million trademark applications filed at the U.S. Patent \& Trademark Office (USPTO), this Article presents evidence of rising numbers of applications for nonword trademarks that are highly specific, intricate, and often unlikely to be recognized by consumers who are not familiar with the nuances of a particular industry. In so doing, this Article provides the first large-scale empirical analysis of the ``design search codes'' the USPTO assigns to any trademark application containing images. Since the USPTO initiated its modern design coding system in the mid-1980s, the number of highly complex nonword trademarks, as measured by number of design search codes, has risen at least 700\% and has also increased as a proportion of all applications. One explanation for this is that having more codes increases a mark's odds of USPTO approval. Another explanation is that, as desirable word marks become more scarce, businesses have begun to substitute away from words into images.
+
+There are two principal reasons to be concerned about this trend. First, as highly specific and detailed nonword trademarks become more common, there is a growing risk that some of these nonverbal marks—often those applied for by luxury brands—effectively subsidize a feeling of in-group membership for the consumers that can recognize those marks, a dynamic that reinforces patterns of social inequality. Second, opportunistic or even fraudulent applicants, incentivized by the favorable odds of USPTO approval for complex nonword marks, may prosecute nonword applications that they wouldn't have otherwise pursued, resulting in ``clutter'' on the USPTO's registers that shrinks the public domain and may disadvantage competing businesses. In response, this Article proposes that considering consumer sophistication as part of the threshold inquiry into a nonword trademark's validity can help temper the potential overprotection of highly complex nonword marks, as well as the risk that marks recognized by sophisticated consumers will receive too broad a scope of protection.
 
 \end{itshape}
 
@@ -113,7 +115,7 @@ Although the prototypical trademark may be a brand name (e.g., APPLE, NIKE), tra
 
 If asked to think of a trademark, one's first thought is probably a name—say, APPLE, NIKE, or UBER.\footnote{Indeed, it's difficult to draw a clear line between the abstract idea of a brand and the specific name that represents that brand in consumers' minds—this may be a distinction without a difference. \textit{Cf.} Alexander Chernev, Ryan Hamilton \& David Gal, \textit{Competing for Consumer Identity: Limits to Self-Expression and the Perils of Lifestyle Branding}, 75 \textsc{J. Mktg.} 66, 69–70 (2011) (reporting results of an experiment in which experimenters asked participants to think of ``brands'' significant to themselves or their parents and subsequently asked participants to express their preference for certain \textit{brand names}, with the null hypothesis being that thinking of personally-significant brands (as opposed to brands significant to others) in the first step would not significantly reduce the strength of the preferences articulated in the second step).} And justly so. Trademarks refer to a product's source, and as the Supreme Court has recently reminded us, the prototypical trademark is the name of a product's maker.\footnote{\label{supra1} Vidal v. Elster, 602 U.S. 286, 305–06 (2024) (quoting Ainsworth v. Walmsley, L.R. 1 Eq. 518, 525 (1866)) (``[I]s not a man’s name as strong an instance of trade-mark as can be suggested?'').} ``[E]ven as late as 1860 the term `trademark' really denoted only the name of the manufacturer."\footnote{\textit{Id.} at 305 (quoting Beverly W. Pattishall, \textit{Two Hundred Years of American Trademark Law}, 68 \textsc{Trademark Rep.} 121, 128 (1978) (quoting a treatise)).} In some ways, not much has changed. Today, the words that represent the brand value of trillion- or hundred-billion-dollar companies like Apple, Nike, and Uber are simply modern avatars of the ancient practice of identifying products by the verbal symbols etched onto them.\footnote{\textit{See} \textsc{Google Finance}, \url{https://www.google.com/finance/} (providing the market capitalizations of all publicly listed U.S. companies); \textit{infra} Section~\ref{sec:2}.\ref{subsec:2C}.}
 
-Yet this view of trademarks is also somewhat cramped. Nonverbal features of products—colors, shapes, sounds—can be trademarks too.\footnote{\textit{See generally} \textsc{The Protection of Non-Traditional Trademarks: Critical Perspectives} (Irene Calboli \& Martin Senftleben eds., 2018) [hereinafter \textsc{The Protection of Non-Traditional Trademarks}].} Consider the wrapper of a Hershey’s Kiss, the physical appearance of an Apple store, or the design of Nike Air Jordan shoes. All are federally registered trademarks.\footnote{Registration No. 6,639,129 (design of upper panels on Air Jordan shoes); Registration No. 4,021,593 (façade of Apple's Fifth Avenue, New York City location); Registration Nos. 4,277,914, 4,277,913 (interior layout of Apple Stores in general); Registration No. 186,828 (a single wrapped Hershey's Kiss).} And trademark law largely takes for granted that these nonword trademarks represent a continuation of the historical association between names and trademarks.\footnote{\textit{See infra} Section~\ref{sec:2}.\ref{subsec:2C}.} But does that make sense? As scholars have increasingly emphasized, trademark law's fixation on words risks overlooking the nuances of nonword trademarks, which can evoke in consumers' minds a broad range of connotations, some of which are not tied to denoting a product's source.\footnote{\label{supra3} \textit{See} Dustin Marlan, \textit{Visual Metaphor and Trademark Distinctiveness}, 93 \textsc{Wash. L. Rev.} 767, 769, 772 (2018) (``We live in an age where visual images dominate commerce and branding, yet trademark law fails to properly analyze image marks . . . .''); Rebecca Tushnet, \textit{Looking at the Lanham Act}, 48 \textsc{Hous. L. Rev.} 861, 866 (2011) (``Trademark law has struggled to fit nonword marks into the [test for evaluating word marks] and has failed to offer any particularly well-formed alternatives to [that test] for images or other nonverbal symbols that might indicate source, with the partial exception of product packaging trade dress.''); \textit{id.} at 912–14 (discussing how trade dress can make nonverbal claims about products' healthfulness or environmental impact); \textit{cf.} Mark A. Lemley \& Mark P. McKenna, \textit{Trademark Spaces and Trademark Law’s Secret Step Zero}, 75 \textsc{Stan. L. Rev.} 1, 12–13 (2023) (noting that the category of image marks that are not traditional logos ``has never been particularly well-defined'').} Indeed, commercial images can often ``encode" complex, multifaceted meanings in a way words can't.\footnote{\textit{See id.} at 898 n.156 (quoting William D. Wells, \textit{Three Useful Ideas}, 13 \textsc{Advances in Consumer Res.} 9, 9 (1986) (discussing how in advertisements ``casting, lighting, accents, dialogue, music, body language—all the instruments of drama'' ``encode[]'' information about a product in addition to the express claims made about that product)).} Given that ability to encode, would it be surprising if businesses used nonword trademarks in a way that has little to do with the model of the trademarks as names? In fact, what if businesses used nonword trademarks less as \textit{names} and more as \textit{passwords}—a visual code known only by the initiated?
+Yet this view of trademarks is also somewhat cramped. Nonverbal features of products—colors, shapes, sounds—can be trademarks too.\footnote{\textit{See generally} \textsc{The Protection of Non-Traditional Trademarks: Critical Perspectives} (Irene Calboli \& Martin Senftleben eds., 2018) [hereinafter \textsc{The Protection of Non-Traditional Trademarks}].} Consider the wrapper of a Hershey’s Kiss, the physical appearance of an Apple store, or the design of Nike Air Jordan shoes. All are federally registered trademarks.\footnote{Registration No. 6,639,129 (design of upper panels on Air Jordan shoes); Registration No. 4,021,593 (façade of Apple's Fifth Avenue, New York City location); Registration Nos. 4,277,914, 4,277,913 (interior layout of Apple Stores in general); Registration No. 186,828 (a single wrapped Hershey's Kiss).} And trademark law largely takes for granted that these nonword trademarks represent a continuation of the historical association between names and trademarks.\footnote{\textit{See infra} Section~\ref{sec:2}.\ref{subsec:2C}.} But does that make sense? As scholars have increasingly emphasized, trademark law's fixation on words risks overlooking the nuances of nonword trademarks, which can evoke in consumers' minds a broad range of connotations, some of which may be untethered from trademarks' core function of denoting a product's source.\footnote{\label{supra3} \textit{See} Dustin Marlan, \textit{Visual Metaphor and Trademark Distinctiveness}, 93 \textsc{Wash. L. Rev.} 767, 769, 772 (2018) (``We live in an age where visual images dominate commerce and branding, yet trademark law fails to properly analyze image marks . . . .''); Rebecca Tushnet, \textit{Looking at the Lanham Act}, 48 \textsc{Hous. L. Rev.} 861, 866 (2011) (``Trademark law has struggled to fit nonword marks into the [test for evaluating word marks] and has failed to offer any particularly well-formed alternatives to [that test] for images or other nonverbal symbols that might indicate source, with the partial exception of product packaging trade dress.''); \textit{id.} at 912–14 (discussing how trade dress can make nonverbal claims about products' healthfulness or environmental impact); \textit{cf.} Mark A. Lemley \& Mark P. McKenna, \textit{Trademark Spaces and Trademark Law’s Secret Step Zero}, 75 \textsc{Stan. L. Rev.} 1, 12–13 (2023) (noting that the category of image marks that are not traditional logos ``has never been particularly well-defined'').} Indeed, commercial images can often ``encode" complex, multifaceted meanings in a way words can't.\footnote{Tushnet, \textit{supra} note [X], at 898 n.156 (quoting William D. Wells, \textit{Three Useful Ideas}, 13 \textsc{Advances in Consumer Res.} 9, 9 (1986) (discussing how in advertisements ``casting, lighting, accents, dialogue, music, body language—all the instruments of drama'' ``encode[]'' information about a product in addition to the express claims made about that product)).} Given that ability to encode, would it be surprising if businesses used nonword trademarks in a way that has little to do with the model of trademarks as names? In fact, what if businesses used nonword trademarks less as \textit{names} and more as \textit{passwords}—a visual code known only by the initiated?
 
 This Article argues that this is increasingly the case. Drawing on data culled from 10.7 million trademark applications filed at the U.S. Patent \& Trademark Office (USPTO), I present evidence of rising numbers of applications for nonword trademarks that are highly specific, intricate, and often unlikely to be recognized by consumers who are not familiar with the nuances of a particular industry. In so doing, I provide the first large-scale empirical analysis of the ``design search codes'' the USPTO assigns to any trademark application containing images. Take, for example, the particular background pattern on the boxes containing Caperdonich Speyside single-malt whisky: \par \
 
@@ -151,9 +153,11 @@ This Article argues that this is increasingly the case. Drawing on data culled f
 
 \noindent What these USPTO-approved marks have in common is that they are highly complex, based on their numerous design search codes. Since the USPTO initiated its modern design coding system in the mid-1980s, the number of applications for such highly complex nonword trademarks has risen at least 700\% and has also increased as a proportion of all applications, suggesting meaningful—and potentially troubling—changes to our aesthetic environment. This increase is particularly striking given that nonword applications, as a group, have actually \emph{decreased} as a proportion of all applications over the same period.
 
-Further, I present a regression analysis indicating that having more codes increases a mark's odds of USPTO approval. One interpretation of that finding is that the recent increase in highly complex nonword marks reflects a strategy by applicants to better their chances of USPTO approval. But that's not the whole story. Over the past few decades, economic growth, the rise of Amazon's brand registry, and applicant opportunism have come together to generate a pronounced rise in the overall number of applications for word marks filed at the USPTO.\footnote{\textit{See infra} Section~\ref{sec:2}.\ref{subsec:2B}.\ref{subsubsec:2B1}.} And while I do not argue that this increase in trademark filings has \emph{caused} the proportion of highly complex nonword marks to increase, the data and their context suggest that the two trends are meaningfully intertwined. In particular, given recent scholarship finding that unclaimed but desirable word marks are becoming scarcer,\footnote{\label{supra4} \textit{See} Barton Beebe \& Jeanne C. Fromer, \textit{Are We Running out of Trademarks?}, 131 \textsc{Harv. L. Rev.} 945 (2018) (showing that a high proportion of words that would be desirable trademarks—namely, frequently-used English words, single-syllable words, and common surnames—are either already registered as marks or are confusingly similar to an already-registered mark).} one might infer that businesses are substituting or diversifying away from applications for word marks and into applications for nonword marks, as images may be less depleted than words.
+One explanation for this is that applications for highly complex marks reflect a strategy by applicants to better their chances of USPTO approval. I find support for that explanation: a regression analysis indicates that having more codes increases a mark's odds of USPTO approval. But that's not the whole story. Over the past few decades, economic growth, the rise of Amazon's brand registry, and applicant opportunism have come together to generate a pronounced rise in the overall number of applications for word marks filed at the USPTO.\footnote{\textit{See infra} Section~\ref{sec:2}.\ref{subsec:2B}.\ref{subsubsec:2B1}.} And while I do not argue that this increase in trademark filings has \emph{caused} the proportion of highly complex nonword marks to increase, the data and their context suggest that the two trends are meaningfully intertwined. In particular, given recent scholarship finding that unclaimed but desirable word marks are becoming scarcer,\footnote{\label{supra4} \textit{See} Barton Beebe \& Jeanne C. Fromer, \textit{Are We Running out of Trademarks?}, 131 \textsc{Harv. L. Rev.} 945 (2018) (showing that a high proportion of words that would be desirable trademarks—namely, frequently-used English words, single-syllable words, and common surnames—are either already registered as marks or are confusingly similar to an already-registered mark).} one might infer that businesses are substituting or diversifying away from applications for word marks and into applications for nonword marks, as images may be less depleted than words.
 
-Higher numbers of complex nonword marks create two principal problems, particularly against the background of increasing numbers of trademark filings. First, rising nonword mark complexity threatens to push trademark law out of sync with market reality, exacerbating consumer inequality. If subtle branding elements like the Caperdonich box pattern and Réjane clasp are trademarks, then, in theory, those branding elements serve to tell consumers who makes the relevant product. Yet these branding elements are strikingly understated, context-specific, and nuanced—a far cry from the instantly-recognizable word NIKE or the iconic façade of Apple's Fifth Avenue store. If anything, an ability to recognize nonword marks like the Caperdonich box pattern or Réjane clasp seems more like a sign of connoisseurship than an automatic result of these marks' presence in the market. Indeed, it's not for nothing that, in the fashion world, the aesthetic surrounding such branding elements has recently taken on the name of ``stealth wealth'' or ``quiet luxury.'' Where it was once clear and in-your-face, many businesses' branding—particularly that of luxury businesses—has become more complex and recherché, recognizable only by the initiated.\footnote{\textit{See, e.g.}, Gretha Cachia, \textit{The Challenges of Protecting Quiet Luxury Brands}, \textsc{Glob. Legal Post} (June 20, 2024), \url{https://www.globallegalpost.com/news/the-challenges-of-protecting-quiet-luxury-brands-1414585052} (``It’s a new aesthetic of understated affluence and elegance for refined and educated tastes. . . . Quiet luxury’s aura of mystery is precisely what creates a sense of educated exclusivity in the elite social circles of people who can recognise (and afford) premium possessions.''); Guy Trebay, \textit{What's the Status of Flaunting Your Status?}, \textsc{N.Y. Times} (July 22, 2023), \url{https://www.nytimes.com/2023/07/22/style/quiet-luxury-wealth-status.html} (``[F]or those in the class of New Old Money — that is, great fortunes made, often in tech, in a time frame bracketed by Myspace and TikTok — wealth display is noticeable, but only to those who know what they’re looking for.''); Jessica Dickler, \textit{At a Time When Most Americans Are Living Paycheck to Paycheck, the ‘Quiet Luxury’ Trend Takes Over}, CNBC (June 10, 2023), \url{https://www.cnbc.com/2023/06/10/quiet-luxury-may-be-americans-most-expensive-trend-to-date.html} (suggesting that the ``stealth wealth'' or ``quiet luxury'' aesthetic is exemplified by outfits worn by actress Gwyneth Paltrow during her courtroom appearances in connection with ski tort litigation in Utah).} Yet trademark doctrine is not equipped to understand this distinction. Trademark doctrine takes for granted that marks are intended to speak to all consumers. Perversely, this means that the new trademark complexity may co-opt intellectual property protection to subsidize a feeling of in-group membership for certain consumers—at the expense of trademark law's core goal of reducing search costs for \textit{all} consumers.
+%add note on owner analysis
+
+Higher numbers of complex nonword marks create two principal problems, particularly against the background of increasing numbers of trademark filings. First, rising nonword mark complexity threatens to push trademark law out of sync with market reality, exacerbating consumer inequality. If subtle branding elements like the Caperdonich box pattern and Réjane clasp are trademarks, then, in theory, those branding elements serve to tell consumers who makes the relevant product. Yet these branding elements are strikingly understated, context-specific, and nuanced—a far cry from the instantly-recognizable word NIKE or the iconic façade of Apple's Fifth Avenue store. If anything, an ability to recognize nonword marks like the Caperdonich box pattern or Réjane clasp seems more like a sign of connoisseurship than an automatic result of these marks' presence in the market. Indeed, it's not for nothing that, in the fashion world, the aesthetic surrounding such branding elements has recently taken on the name of ``stealth wealth'' or ``quiet luxury.'' Where it was once clear and in-your-face, many businesses' branding—particularly that of luxury businesses—has become more complex and recherché, recognizable only by the initiated.\footnote{\textit{See, e.g.}, Gretha Cachia, \textit{The Challenges of Protecting Quiet Luxury Brands}, \textsc{Glob. Legal Post} (June 20, 2024), \url{https://www.globallegalpost.com/news/the-challenges-of-protecting-quiet-luxury-brands-1414585052} (``It’s a new aesthetic of understated affluence and elegance for refined and educated tastes. . . . Quiet luxury’s aura of mystery is precisely what creates a sense of educated exclusivity in the elite social circles of people who can recognise (and afford) premium possessions.''); Guy Trebay, \textit{What's the Status of Flaunting Your Status?}, \textsc{N.Y. Times} (July 22, 2023), \url{https://www.nytimes.com/2023/07/22/style/quiet-luxury-wealth-status.html} (``[F]or those in the class of New Old Money — that is, great fortunes made, often in tech, in a time frame bracketed by Myspace and TikTok — wealth display is noticeable, but only to those who know what they’re looking for.''); Jessica Dickler, \textit{At a Time When Most Americans Are Living Paycheck to Paycheck, the ‘Quiet Luxury’ Trend Takes Over}, CNBC (June 10, 2023), \url{https://www.cnbc.com/2023/06/10/quiet-luxury-may-be-americans-most-expensive-trend-to-date.html} (suggesting that the ``stealth wealth'' or ``quiet luxury'' aesthetic is exemplified by outfits worn by actress Gwyneth Paltrow during her courtroom appearances in connection with ski tort litigation in Utah).} Yet trademark doctrine is not equipped to understand this distinction. Trademark doctrine takes for granted that, even if consumers may not have previously encountered a mark (e.g., the word mark CAPERDONICH on a bottle), \textit{they will nonetheless understand that it is a mark}. Perversely, this means that the new trademark complexity may co-opt intellectual property protection of nonword marks to subsidize a feeling of in-group membership for certain consumers—at the expense of trademark law's core goal of reducing search costs for \textit{all} consumers.
 
 Second, as noted, the more complex a nonword mark is, the better its odds of receiving USPTO approval. That's because elevated complexity often makes nonword marks sufficiently unique or uncommon to pass the test for ``distinctiveness,'' the key requirement for any trademark.\footnote{\textit{See infra} Part~\ref{sec:1}.\ref{subsec:1B}.} But this dynamic threatens to be tremendously wasteful. Prosecuting each one of these marks requires a nontrivial amount of USPTO resources—indeed, more resources than word marks do.\footnote{\textit{See infra} Part~\ref{sec:1}.\ref{subsec:1C}.} Those resources are misdirected if USPTO-approved trademarks are unlikely to have source-indicative meaning to consumers beyond a select few. Moreover, the favorable odds of obtaining approval for a visually complex mark may incentivize applicants to pursue opportunistic or even fraudulent applications for nonword marks that, all else equal, they would not have pursued.\footnote{\textit{See} Barton Beebe \& Jeanne Fromer, \textit{Fake Trademark Specimens: An Empirical Analysis}, 120 \textsc{Colum. L. Rev. F.} 217 (2020) (finding, among other things, that in a random sample of 365 trademark applications filed at the USPTO in 2017 66.9\% included fraudulent specimens, meaning that the applicants were not in fact using those marks in commerce, as required by law).} This can result in marks that appear active on the USPTO's registers but are not actually being used by their ostensible owners. Such trademark ``clutter'' reduces the quantity of images in the public domain and disadvantages competing businesses who wish to use similar marks.\footnote{\textit{See} Beebe \& Fromer, \textit{supra} note~\ref{supra4}, at 951 n.19, 1034 (``Cluttering refers to marks that are registered but not used in commerce by their registrants in one or more of the classes in which they are registered.'').} Indeed, just as recent scholarship shows that good \textit{word} trademarks are becoming more scarce, we could potentially see a similar problem with nonword trademarks in the long term.\footnote{Barton Beebe and Jeanne Fromer have suggested that image marks are potentially becoming more depleted (in the sense that fewer images that do not conflict with existing marks are available) and congested (in the sense that a larger number of similar images are being claimed by different firms for the same products), just as is occurring with word marks. \textit{See id.} at 951, 1041.}
 
@@ -479,10 +483,18 @@ Context strongly suggests one such factor is the dramatic increase in total numb
 
 As the next Section discusses further, one compelling way to understand this pattern is as the result of a fundamental shift in the branding environment—and, indeed, in the broader aesthetic environment. In particular, qualitative accounts of branding trends in recent years suggest that, as ever-growing numbers of word marks have saturated trademarks' linguistic territory, business have come to focus more on nonverbal branding elements as a way to distinguish themselves. In other words, as less and less of the domain of words is available to be claimed as a mark, businesses' focus on creating unique, memorable trademarks may intensifying within the domain of the visual, leading to a greater emphasis on claiming specific images, shapes, and patterns as marks.
 
-It is not straightforward, however, to test this causal thesis. The yearly numbers of nonword trademarks, high-code marks, and all trademarks in general have each increased over time. So the correspondence among them does not necessarily reflect the effect of the increase in one type of filing on another type of filing. Rather, it reflects a general increase in filings. Nonetheless, other variables in the data may suggest a causal link between increased applications for word marks, on the one hand, and increased applications for high-code marks, on the other. First, if the growing depletion of good word marks were driving businesses to file for high-code marks, then we would expect that, in the classes of goods/services in which depletion is the highest, high-code marks have become more common. This is exactly what we find.
+It is not straightforward, however, to test this causal thesis. The yearly numbers of nonword trademarks, high-code marks, and all trademarks in general have each increased over time. The correspondence among them reflects a general increase in filings more than it reflects the effect of the increase in one type of filing on another type of filing.
+
+Nonetheless, other variables in the data may suggest a causal link between increased applications for word marks, on the one hand, and increased applications for high-code marks, on the other. First, if the growing depletion of good word marks were driving businesses to file for high-code marks, then we would expect that, in the classes of goods/services in which depletion is the highest, high-code marks have become more common. This is exactly what we find. Figure~\ref{fig:9} shows the number of high-code applications filed in each international class of goods/services as a proportion of all of the applications filed in that class.
+
+\begin{figure}[H]
+\centering
+\input{./graphics/figure_9.1.tex}
+\input{./graphics/figure_9.2.tex}
+\caption{\label{fig:12} Number of nonword applications with $>5$ and $>10$ codes filed in each international class of goods/services (1986 - 2023)}
+\end{figure}
 
 Second, and relatedly, we might also expect that businesses that have filed a large amount of high-code marks are those that are particularly exposed to the risk of word-mark depletion. 
-
 
 \subsection{The New Trademark Complexity}\label{subsec:2C}
 
@@ -554,10 +566,14 @@ At worst, highly complex nonword marks pose a serious risk of ``trademark clutte
 
 \section{Policy Implications} \label{sec:3}
 
+\subsection{Distinctiveness as Complexity}\label{subsec:3A}
+
+
+
+\subsection{Incorporating Consumer Sophistication into the Distinctiveness Analysis}\label{subsec:3B}
+
+
 \addcontentsline{toc}{section}{Conclusion}
-
-[To come.]
-
 \section*{Conclusion}
 
 [To come.]
@@ -565,9 +581,8 @@ At worst, highly complex nonword marks pose a serious risk of ``trademark clutte
 \newpage
 
 \appendix
-\section*{Appendix A: Dataset}
-
 \addcontentsline{toc}{section}{Appendix A: Dataset}
+\section*{Appendix A: Dataset}
 
 This Appendix provides some high-level background on the Trademark Case Files dataset the USPTO makes publicly available, along with a description of how the data I use in Part~\ref{sec:2}'s analysis is derived from that dataset.
 
